tdf#134084 use the desired image size, not the current image size

when updating the color bar

Change-Id: I6bf76a38adc034a25c0c31833c14f2b6afe3ec6d